--- a/src/app/courses/home/home.component.css
+++ b/src/app/courses/home/home.component.css
@@ -1,13 +1,12 @@
-
 .title {
   text-align: center;
+  margin-top: 15px;
 }
 
 .courses-panel {
   max-width: 350px;
   margin: 0 auto;
 }
-
 
 .counters {
   display: flex;
@@ -16,4 +15,3 @@
 .filler {
   flex: 1 1 auto;
 }
-
