--- a/src/app/courses/home/home.component.html
+++ b/src/app/courses/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="courses-panel">
 
-  <h2 class="mat-title title">All Courses</h2>
+  <h2 class="mat-title center mt-15">All Courses</h2>
 
-  <div class="counters mat-subheading-2">
+  <div class="counters mat-subheading-2 center">
     <p>In Promo: {{promoTotal$ | async}}</p>
   </div>
 
